@@ -25,6 +25,9 @@ GNU parted NEWS                                    -*- outline -*-
 
 ** Changes in behavior
 
+  parted -l no longer lists device-mapper devices other than
+  dmraid whole disks.
+
   Added new Linux-specific partition GUID type code
   (0FC63DAF-8483-4772-8E79-3D69D8477DE4) for Linux filesystem data on GPT
   disks.  This type code is now assigned as the default partition type code
